--- a/styles/style.less
+++ b/styles/style.less
@@ -283,13 +283,18 @@ footer {
 		background: transparent url(../images/chatham-direct-logo-login-small.png) top left no-repeat;
 	}
 
-	form{
+	form {
 		margin: 0 auto 20px;
 		padding: 20px;
 	
-			input[type="submit"] {
+		input[type="submit"] {
 				width: 100%;
-			}
+		}
+
+		span {
+			width: 100%;
+			padding: 0;
+		}
 
 	}
 
