--- a/styles/style.less
+++ b/styles/style.less
@@ -42,9 +42,14 @@ html {
 }
 
 a {
+	color: #0000ff;
 	outline: none;
 	text-decoration: none;
 	
+	&:hover {
+		text-decoration: underline;
+	}
+
 	&:active {
 		position: relative;
 		top: 1px;
@@ -212,6 +217,7 @@ form {
 
 			&:hover {
 				color: @black;
+				text-decoration: none;
 			}
 
 		}
